# y-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pip.ini  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
.github/workflows/: deploy-web.yml  deploy.yml  publish.yml
admin/: handler.py  pyproject.toml
agent/: Makefile  pyproject.toml
agent/src/agent/: config.py  loop.py  permissions.py  skills.py  tool_base.py
agent/src/agent/provider/: __init__.py  anthropic_format_provider.py  openai_format_provider.py
agent/src/agent/tools/: __init__.py  bash.py  file_edit.py  file_read.py  file_write.py  local_exec.py  sprites_exec.py
agent/src/agent/utils/: message_utils.py
api/: pyproject.toml  run.sh
api/src/api/: main.py
api/src/api/controller/: auth.py  chat.py
api/src/api/middleware/: auth.py
cli/: pyproject.toml
cli/src/yagent/: command_option.py  config.py  display_manager.py  input_manager.py  settings.py
cli/src/yagent/chat/: app.py  chat_manager.py  runner.py
cli/src/yagent/chat/provider/: anthropic_format_provider.py  base_provider.py  openai_format_provider.py
cli/src/yagent/chat/utils/: message_utils.py
cli/src/yagent/commands/: init.py
cli/src/yagent/commands/bot/: add.py  delete.py  list.py  update.py
cli/src/yagent/commands/chat/: chat.py  click.py  import_chat.py  list.py  share.py
cli/src/ycli/: command_option.py  config.py  display_manager.py  settings.py
cli/src/ycli/chat/: app.py  chat_manager.py  intent_analyzer.py
cli/src/ycli/chat/provider/: anthropic_format_provider.py  base_provider.py  dify_provider.py  display_manager_mixin.py  openai_format_provider.py  topia_orch_provider.py
cli/src/ycli/chat/utils/: message_utils.py
cli/src/ycli/commands/: init.py
cli/src/ycli/commands/bot/: add.py  click.py  delete.py  list.py
cli/src/ycli/commands/chat/: chat.py  click.py  import_chat.py  list.py  share.py
control/: celery.pidbox.exchange
docs/: MCP_DAEMON.md  PROMPT_CONFIGURATION.md
scripts/: create-role.sh  deploy-web.sh  deploy.sh
src/: client_factory.py  config.py
src/bot/: models.py  service.py
src/chat/: app.py  chat_manager.py  intent_analyzer.py  models.py  service.py
src/chat/provider/: base_provider.py  dify_provider.py  openai_format_provider.py  topia_orch_provider.py
src/chat/repository/: factory.py  sqlite.py
src/chat/utils/: message_utils.py
src/cli/: __init__.py  display_manager.py  input_manager.py
src/cli/commands/: init.py
src/cli/commands/bot/: add.py  list.py
src/cli/commands/chat/: chat.py  export_chat.py  import_chat.py  list.py  share.py
src/cli/commands/daemon/: restart.py  start.py  status.py  stop.py  utils.py
src/cli/commands/prompt/: add.py  list.py
src/config/: __init__.py  database.py  settings.py
src/entity/: __init__.py  base.py  bot_config.py  chat.py  dto.py  preset.py  prompt_config.py
src/mcp_daemon/: main.py  server.py
src/mcp_server/: client.py  daemon.py  mcp_manager.py  models.py  prompt.py
src/prompt/: preset.py  service.py
src/repository/: bot_config.py  chat_d1.py  chat_d1_util.py  chat_factory.py  chat_sqlite.py  prompt_config.py
src/service/: bot_config.py  chat.py  prompt_config.py
src/tcp_client/: __init__.py  connection_pool.py  main.py  models.py
storage/: Makefile  pyproject.toml
storage/src/storage/: cache.py  celery_config.py  util.py
storage/src/storage/database/: base.py
storage/src/storage/entity/: bot_config.py  chat.py  dto.py  user.py  vm_config.py
storage/src/storage/repository/: bot_config.py  chat.py  user.py  vm_config.py
storage/src/storage/service/: bot_config.py  chat.py  user.py  vm_config.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  main.ts  main.tsx  style.css
web/src/components/: ApprovalBar.tsx  ChatList.tsx  ChatView.tsx  Header.tsx  MessageBubble.tsx  MessageList.tsx  NewChatInput.tsx  ShareView.tsx
web/src/hooks/: useAuth.ts
web/src/utils/: favicon.ts
worker/: handler.py  pyproject.toml
worker/src/worker/: celery_app.py  main.py  runner.py  tasks.py
