[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "y-cli-agent"
version = "0.4.0"
description = "Agent loop and tools for y-cli"
requires-python = ">=3.10"
dependencies = [
    "y-cli-storage",
]

[tool.uv.sources]
y-cli-storage = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
