[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "y-agent-agent"
version = "0.4.0"
description = "Agent loop and tools for y-agent"
requires-python = ">=3.10"
dependencies = [
    "y-agent-storage",
    "pyyaml",
    "httpx>=0.26.0",
]

[tool.uv.sources]
y-agent-storage = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
